  * Ice is now considered water, and won't cause you to see through terrain
  * Player spawnpoints/locations were off by 1 on the Z axis; fixed that
  * Support for Beta 1.3 Region format for chunk storage
  * (internal) changed class name to com.apocalyptech.minecraft.xray
  * Ignore blocks generated by the More Block IDs mod, rather than dying

Minecraft X-Ray 2.7 Maintenance Branch 8 (2011.01.26)

  * Removed useless "antialiasing" option on startup dialog
  * Startup dialog will remember your previously-chosen options
  * Water rendering can be toggled with "T"
  * Camera can be locked onto the Y axis with "L"
  * Water and fire should render properly regardless of texture pack
  * Fixed a bug where changes to the draw distance wouldn't get
    updated if ore highlighting was turned off
  * Ore highlights can be specified in the properties file now
  * Multiplayer camera presets are now sorted by username
  * Highlight (in green) areas near torches with "E"
  * Updated texture info for Jukeboxes and Workbenches
  * Manually throttle back FPS when we don't have focus, or are offscreen
  * Rendering status information added, toggled with "R" (on by default)
  * Officially set license to New/Modified BSD License

Minecraft X-Ray 2.7 Maintenance Branch 7 (2011.01.21)

  * Key mappings are now taken from a config file which will get
    generated automatically with the defaults if not present.
  * Generate a tbz2 file for Linux/OSX folks

Minecraft X-Ray 2.7 Maintenance Branch 6 (2011.01.19)

  * Fixed a bug where wool and wood wouldn't be considered solid blocks
  * Ability to warp to any player's position with INS/DEL when loading
    multiplayer worlds
  * Minecart tracks, paintings and fences render properly now
  * Fixed a NullPointerException related to dyed wool

Minecraft X-Ray 2.7 Maintenance Branch 5 (2011.01.17)

  * Generate Windows EXE via JSmooth
  * Fixed a bug that was keeping chunk files open
  * Load chunks on-demand rather than at program start