@@ -5,6 +5,8 @@
   * Support for Beta 1.3 Region format for chunk storage
   * (internal) changed class name to com.apocalyptech.minecraft.xray
   * Ignore blocks generated by the More Block IDs mod, rather than dying
+  * Fixed Minecraft data directory detection on a corner case (possibly
+    just for people using the Administrator account in XP)
 
 Minecraft X-Ray 2.7 Maintenance Branch 8 (2011.01.26)
 
